Development
    Fix some problems with cache flags
    When GIO is enabled, enable cache if GIO says file is not native
    Added Czech translation by Petr Pisar
    Rework subwindow layouts, do all pane allocations now thru adjust_layout
    Fix X and Z keys not working in fullscreen mode
    Move subcp out of disable_ass if block
    Make loading a secondary http:// url via open location work correctly
    Set media label to be ellipsized on long values
    If we have an http url and its playback time was very short, retry with the playlist flag
    Make resizeing on new video media an option under Interface, defaults to false
    Add in option to add a margin for the subtitles on the lower part of the video
    Only use embedded fonts when using an MKV container, fallback to specified fonts otherwise
    Correct some drag and drop mechanics when playlist opened vs closed
    Fix problems with bring to front and embed mode
    Playlist colums are now sortable, Title, Artist and Album. New button to unsort list as well.
    Apply patch "bring_to_front" plus some additional changes
    Workaround side effect of forcecache option
    If single instance mode, then always show playlist if start with playlist visible is specified
    Tell session manager and screen saver to inhibit going idle
    Add Dutch Translation
    Restart player at 'close' location when preferences are changed
        Exact frame is limited by mplayer, so restart may not be in exact location
    Add option to Edit->Preferences to select the default audio output more Stereo, Surround or 5.1
    Added Lithuanian translation
    Fix minor memory leak
    Have ogv files use the lavf demuxer
    Fix window inital size when playlist is visible.
    When running in ALSA or PULSE (flat volume), track the main volume control (unless using softvol)
    Raise max cache size from 32MB to 256MB
    Switch audio language properly in multiaudio file when langcodes are present