@@ -1,4 +1,5 @@
 Development
+    Add -noidle to mplayer options, cause people like to add it to the .mplayer/config file
     Fix some problems with cache flags
     When GIO is enabled, enable cache if GIO says file is not native
     Added Czech translation by Petr Pisar
